--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                         <div class="software-badge">AI-Powered</div>
                     </div>
                     <div class="software-content">
-                        <h3>AIHOS - AI Assistant</h3>
+                        <h3>IHSN - AI Assistant</h3>
                         <p>A powerful AI assistant for your PC with a clean, modern interface. Get instant answers to your questions and enhance your productivity with intelligent assistance.</p>
                         <div class="software-features">
                             <span>Smart Responses</span>
@@ -553,4 +553,5 @@
         });
     </script>
 </body>
+
 </html>
