--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <!-- AIHOS Card -->
                 <div class="software-card fade-in">
                     <div class="software-image">
-                        <img src="https://www2.0zz0.com/2025/10/04/20/701264309.jpg" alt="AIHOS Software Interface">
+                        <img src="https://www2.0zz0.com/2025/10/06/19/520161879.png" alt="AIHOS Software Interface">
                         <div class="software-badge">AI-Powered</div>
                     </div>
                     <div class="software-content">
@@ -555,5 +555,6 @@
 </body>
 
 </html>
+
 
 
